turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:66: error: not enough arguments for method initLangton: (name: String)Unit.
Unspecified value parameter name.
  initLangton()
             ^